--- a/index.html
+++ b/index.html
@@ -1,1 +1,8 @@
-Hello World
+<head>
+</head>
+
+<body>
+- MacOS M1
+  - How to install node v14: https://devzilla.io/using-nodejs-14-with-mac-silicon-m1
+
+</body>
