--- a/index.html
+++ b/index.html
@@ -2,7 +2,10 @@
 </head>
 
 <body>
-- MacOS M1
-  - How to install node v14: https://devzilla.io/using-nodejs-14-with-mac-silicon-m1
-
+  <p>
+    <b>MacOS M1</b>
+    <ul>
+      <li> How to install node v14: https://devzilla.io/using-nodejs-14-with-mac-silicon-m1 </li>
+    </ul>
+  </p>
 </body>
