--- a/index.html
+++ b/index.html
@@ -8,4 +8,12 @@
       <li> How to install node v14: https://devzilla.io/using-nodejs-14-with-mac-silicon-m1 </li>
     </ul>
   </p>
+  <p>
+    <b>Python</b>
+    <ul>
+      <li>Environment: python3 -m venv {path_to_env_folder}; source {path_to_env_folder}. Link: <a>https://docs.python.org/3/library/venv.html</a> </li>
+      <li>One-liner if-else (ternary operator): result = "Positive" if x > 0 else "Negative"</li>
+      <li>Pandas - Column to List: columnAsList = df['ColumnName'].tolist()</li>
+    </ul>
+  </p>
 </body>
