--- a/index.html
+++ b/index.html
@@ -23,7 +23,14 @@
       <li>Pandas - Column unique values: df['column_name'].unique() . Link <a>https://www.projectpro.io/recipes/list-unique-values-in-pandas-dataframe</a></li>
       <li>Pandas - Min of a Column: dataframe['column_name'].min() . Link <a>https://www.geeksforgeeks.org/how-to-get-the-minimum-value-from-the-pandas-dataframe-in-python/</a></li>
       <li>Pandas - Save df to CSV: df.to_csv(filepath) . Link <a>https://pandas.pydata.org/pandas-docs/stable/reference/api/pandas.DataFrame.to_csv.html</a></li>
-      
+      <li>Pandas - Join dataframes. Link: <a>https://pandas.pydata.org/pandas-docs/stable/reference/api/pandas.DataFrame.join.html</a></li>
+      <li>Pandas - Drop duplicates: DataFrame.drop_duplicates(subset=None, *, keep='first', inplace=False, ...) . Link: <a>https://pandas.pydata.org/docs/reference/api/pandas.DataFrame.drop_duplicates.html</a></li>
+      <li>Pandas - Get first value in a column: df.at[0, 'Column Name'] . Link: <a>https://stackoverflow.com/questions/25254016/get-first-row-value-of-a-given-column</a></li>
+      <li>Pandas - Number entries dataset: len(df.index) . Link: <a>https://stackoverflow.com/questions/15943769/how-do-i-get-the-row-count-of-a-pandas-dataframe</a></li>
+      <li>Pandas - Days difference between dates: delta = b - a; print(delta.days) . Link: <a>https://stackoverflow.com/questions/151199/how-to-calculate-number-of-days-between-two-given-dates</a></li>
+      <li>Pandas - Convert index to column: df = df.reset_index() . Link: <a>https://stackoverflow.com/questions/20461165/how-to-convert-index-of-a-pandas-dataframe-into-a-column</a></li>
+      <li>Pandas - Iterate over a Dataframe: for index, row in df.iterrows(): print(row['name'], row['age']) . Link: <a>https://saturncloud.io/blog/how-to-iterate-through-specific-columns-and-rows-in-pandas-dataframe-to-perform-a-check/#:~:text=Pandas%20provides%20a%20simple%20and,operations%20using%20functions%20or%20libraries.</a></li>
+      <li>Pandas - Replace value in column: df['City'].replace('New York', 'NY', inplace=True) . Link: <a>https://favtutor.com/articles/pandas-replace-column-values/</a></li>
       
     </ul>
   </p>
