--- a/index.html
+++ b/index.html
@@ -40,4 +40,17 @@
       <li>dcm2nii parameters: <a>https://www.nitrc.org/plugins/mwiki/index.php/dcm2nii:MainPage#General_Usage</a></li>
     </ul>
   </p>
+  <p>
+    <b>Visual Studio Code</b>
+    <ul>
+      <li>Mac - Collapse all code: ⌘ + K ⌘ + 0 . Link: <a>https://stackoverflow.com/questions/42660670/collapse-all-methods-in-visual-studio-code</a></li>
+      <li>Mac - See all shortcuts: ⌘ + K ⌘ + S. Link: <a>https://stackoverflow.com/questions/42660670/collapse-all-methods-in-visual-studio-code</a></li>
+      <li>Item . Link: <a></a></li>
+      <li>Item . Link: <a></a></li>
+      <li>Item . Link: <a></a></li>
+      <li>Item . Link: <a></a></li>
+      <li>Item . Link: <a></a></li>
+      <li>Item . Link: <a></a></li>
+    </ul>
+  </p>
 </body>
